TEST_PROGRAMS/VALID/05/if_elifstar_else_reg_brace.go
/* If statements */

package main

func main() {
	x := true
	y := false

	if y {
		//Do nothing
	} else if x {
		//Do nothing
	} else if x {
		//Do nothing
	} else if x {
		//Do nothing
	} else {
		println(x)
	}

}
