TEST_PROGRAMS/INVALID/05/if_elif_else_rob_brace.go
/* If elif else rob braces */

package main

func main() {
	x := true

	if y {
		//Do nothing
	} else if x 
	{
		//Do nothing
	} else {
		println(x)
	}
}
